Bug 322355 - Swap strategy auto-detection does not work
Summary: Swap strategy auto-detection does not work
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: compositing (other bugs)
Version First Reported In: git master
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL: https://git.reviewboard.kde.org/r/111...
Keywords:
Depends on:
Blocks:
 
Reported: 2013-07-14 17:17 UTC by Ralf Jung
Modified: 2013-08-02 20:58 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.11
Sentry Crash Report:
thomas.luebking: ReviewRequest+


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ralf Jung 2013-07-14 17:17:39 UTC
The auto-detection of the swap strategy does not work - even though I am on an NVidia machine, it uses the "Only when cheap" strategy.

Reproducible: Always




The reason is that at the time Options::setGlPreferBufferSwap is executed, GLPlatform::instance()->driver() is still Driver_Unknown.
Comment 1 Thomas Lübking 2013-08-02 20:58:15 UTC
Git commit d1de9f6e309d5757c4bb12095b7cf7f5164b856d by Thomas Lübking.
Committed on 17/07/2013 at 13:44.
Pushed by luebking into branch 'KDE/4.11'.

keep buffer swap pref automatic until GPU detected

enforce to "e" (cheap) when driver is still unknown after
detection must be assumed to have run, so a sane value is available
when the context is up
FIXED-IN: 4.11
REVIEW: 111548

M  +3    -0    kwin/eglonxbackend.cpp
M  +3    -0    kwin/glxbackend.cpp
M  +1    -1    kwin/options.cpp

http://commits.kde.org/kde-workspace/d1de9f6e309d5757c4bb12095b7cf7f5164b856d